--- a/.github/workflows/develop-auto-tag.yml
+++ b/.github/workflows/develop-auto-tag.yml
@@ -23,9 +23,6 @@ permissions:
   actions: write
   pull-requests: write
 
-env:
-  GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
 jobs:
   tag-develop:
     if: github.actor != 'github-actions[bot]' && (github.event_name != 'pull_request' || github.event.pull_request.merged == true)
@@ -38,64 +35,29 @@ jobs:
 
       - name: Compute next tag
         id: version
-        env:
-          EVENT_NAME: ${{ github.event_name }}
-          REF_NAME: ${{ github.ref_name }}
-          PR_BASE: ${{ github.event.pull_request.base.ref || '' }}
-          PR_MERGED: ${{ github.event.pull_request.merged || 'false' }}
-          DISPATCH_BRANCH: ${{ github.event.inputs.target_branch || '' }}
         run: |
           set -euo pipefail
-          EVENT="$EVENT_NAME"
-          TARGET_BRANCH=""
-          case "$EVENT" in
-            pull_request)
-              [ "$PR_MERGED" != "true" ] && echo "run_job=false" >> "$GITHUB_OUTPUT" && exit 0
-              TARGET_BRANCH="$PR_BASE"
-              ;;
-            push)
-              TARGET_BRANCH="$REF_NAME"
-              ;;
-            workflow_dispatch)
-              TARGET_BRANCH="${DISPATCH_BRANCH:-develop}"
-              ;;
-            *)
-              TARGET_BRANCH="develop"
-              ;;
-          esac
-
-          [ "$TARGET_BRANCH" != "develop" ] && [ "$TARGET_BRANCH" != "main" ] && echo "run_job=false" >> "$GITHUB_OUTPUT" && exit 0
-
-          RELEASE_TYPE="patch"
-          [ "$TARGET_BRANCH" = "main" ] && RELEASE_TYPE="major"
-
           git fetch --tags --force
-          LAST_GLOBAL_TAG=$(git tag -l 'v[0-9]*.0.[0-9]*' --sort=-version:refname | head -n 1 || true)
-
-          CURRENT_MAJOR=0
-          [ -n "$LAST_GLOBAL_TAG" ] && CURRENT_MAJOR=$(echo "$LAST_GLOBAL_TAG" | sed -E 's/^v([0-9]+)\.0\.[0-9]+$/\1/')
+          LAST_TAG=$(git tag -l 'v[0-9]*.0.[0-9]*' --sort=-version:refname | head -n 1 || true)
+          CURRENT_MAJOR=$(echo "${LAST_TAG:-0}" | sed -E 's/^v([0-9]+)\.0\.[0-9]+$/\1/')
           CURRENT_MAJOR=${CURRENT_MAJOR:-0}
-
           NEXT_MAJOR=$CURRENT_MAJOR
           NEXT_PATCH=0
           NEXT_TAG=""
-
+          TARGET_BRANCH="${{ github.ref_name }}"
+          RELEASE_TYPE="patch"
+          [ "$TARGET_BRANCH" = "main" ] && RELEASE_TYPE="major"
           if [ "$RELEASE_TYPE" = "major" ]; then
             NEXT_MAJOR=$((CURRENT_MAJOR + 1))
             NEXT_TAG="v${NEXT_MAJOR}.0.0"
           else
             [ "$NEXT_MAJOR" -eq 0 ] && NEXT_MAJOR=1
             LAST_MAJOR_TAG=$(git tag -l "v${NEXT_MAJOR}.0.*" --sort=-version:refname | head -n 1 || true)
-            if [ -z "$LAST_MAJOR_TAG" ]; then
-              NEXT_PATCH=0
-            else
-              LAST_PATCH=$(echo "$LAST_MAJOR_TAG" | sed -E 's/^v[0-9]+\.0\.([0-9]+)$/\1/')
-              NEXT_PATCH=$((LAST_PATCH + 1))
-            fi
+            LAST_PATCH=$(echo "${LAST_MAJOR_TAG:-0}" | sed -E 's/^v[0-9]+\.0\.([0-9]+)$/\1/')
+            NEXT_PATCH=$((LAST_PATCH + 1))
             NEXT_TAG="v${NEXT_MAJOR}.0.${NEXT_PATCH}"
           fi
-
-          echo "last_tag=${LAST_GLOBAL_TAG}" >> "$GITHUB_OUTPUT"
+          echo "last_tag=${LAST_TAG}" >> "$GITHUB_OUTPUT"
           echo "next_tag=${NEXT_TAG}" >> "$GITHUB_OUTPUT"
           echo "target_branch=${TARGET_BRANCH}" >> "$GITHUB_OUTPUT"
           echo "release_type=${RELEASE_TYPE}" >> "$GITHUB_OUTPUT"
@@ -104,13 +66,12 @@ jobs:
       - name: Update changelog
         id: changelog
         if: steps.version.outputs.run_job == 'true'
-        env:
-          LAST_TAG: ${{ steps.version.outputs.last_tag }}
-          NEXT_TAG: ${{ steps.version.outputs.next_tag }}
-          RELEASE_TYPE: ${{ steps.version.outputs.release_type }}
         run: |
           set -euo pipefail
           CHANGELOG_FILE="CHANGELOG"
+          LAST_TAG="${{ steps.version.outputs.last_tag }}"
+          NEXT_TAG="${{ steps.version.outputs.next_tag }}"
+          RELEASE_TYPE="${{ steps.version.outputs.release_type }}"
           if [ -n "$LAST_TAG" ]; then
             COMMITS=$(git log "${LAST_TAG}..HEAD" --pretty=format:"- %s")
           else
@@ -130,41 +91,26 @@ jobs:
           } > "$CHANGELOG_FILE"
           echo "has_updates=true" >> "$GITHUB_OUTPUT"
 
-      - name: Debug flags
-        run: |
-          echo "run_job=${{ steps.version.outputs.run_job }}"
-          echo "has_updates=${{ steps.changelog.outputs.has_updates }}"
-
-      - name: Create changelog branch and push
-        if: steps.changelog.outputs.has_updates == 'true' && steps.version.outputs.run_job == 'true'
-        env:
-          NEXT_TAG: ${{ steps.version.outputs.next_tag }}
-        run: |
-          set -euo pipefail
-          BRANCH_NAME="changelog-update-${NEXT_TAG}"
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-          git checkout -b "$BRANCH_NAME"
-          git add CHANGELOG
-          git commit -m "docs: update changelog for ${NEXT_TAG}"
-          git push https://x-access-token:${GH_TOKEN}@github.com/${{ github.repository }} "$BRANCH_NAME"
-
-      - name: Create Pull Request
+      - name: Create Pull Request with changelog
         if: steps.changelog.outputs.has_updates == 'true' && steps.version.outputs.run_job == 'true'
         uses: peter-evans/create-pull-request@v5
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+          commit-message: "docs: update changelog for ${{ steps.version.outputs.next_tag }}"
           branch: changelog-update-${{ steps.version.outputs.next_tag }}
           title: "docs: update changelog for ${{ steps.version.outputs.next_tag }}"
           body: "Este PR foi gerado automaticamente para atualizar o changelog."
           base: ${{ steps.version.outputs.target_branch }}
           labels: documentation
+          add-paths: |
+            CHANGELOG
 
       - name: Create and push tag
         if: steps.changelog.outputs.has_updates == 'true' && steps.version.outputs.run_job == 'true'
-        env:
-          NEXT_TAG: ${{ steps.version.outputs.next_tag }}
         run: |
           set -euo pipefail
+          NEXT_TAG="${{ steps.version.outputs.next_tag }}"
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
           git tag -a "$NEXT_TAG" -m "Tag automatica gerada"
           git push origin "$NEXT_TAG"
