--- a/.github/workflows/develop-auto-tag.yml
+++ b/.github/workflows/develop-auto-tag.yml
@@ -91,6 +91,14 @@ jobs:
           } > "$CHANGELOG_FILE"
           echo "has_updates=true" >> "$GITHUB_OUTPUT"
 
+      - name: Commit changelog (local only)
+        if: steps.changelog.outputs.has_updates == 'true' && steps.version.outputs.run_job == 'true'
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add CHANGELOG
+          git commit -m "docs: update changelog for ${{ steps.version.outputs.next_tag }}"
+
       - name: Create Pull Request with changelog
         if: steps.changelog.outputs.has_updates == 'true' && steps.version.outputs.run_job == 'true'
         uses: peter-evans/create-pull-request@v5
