modified:   .github/workflows/develop-auto-tag.yml

--- a/.github/workflows/develop-auto-tag.yml
+++ b/.github/workflows/develop-auto-tag.yml
@@ -112,7 +112,7 @@ jobs:
         if: steps.changelog.outputs.has_updates == 'true' && steps.version.outputs.run_job == 'true'
         uses: peter-evans/create-pull-request@v5
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.PAT }}
           branch: changelog-update-${{ steps.version.outputs.next_tag }}
           delete-branch: true
           title: "docs: update changelog for ${{ steps.version.outputs.next_tag }}"
