--- a/.github/workflows/develop-auto-tag.yml
+++ b/.github/workflows/develop-auto-tag.yml
@@ -104,9 +104,18 @@ jobs:
           git fetch origin "$BRANCH_NAME" || true
           git checkout -b "$BRANCH_NAME" || git checkout "$BRANCH_NAME"
           git rebase origin/"$BRANCH_NAME" || true
+
+          # Garante que o arquivo existe e está atualizado
+          echo "Conteúdo atual do CHANGELOG:"
+          cat CHANGELOG || echo "Arquivo não existe"
+
           git add CHANGELOG
+          git status
+          git diff --cached
+
           git commit -m "docs: update changelog for ${{ steps.version.outputs.next_tag }}" || echo "Nada novo para comitar"
           git push https://x-access-token:${{ secrets.PAT }}@github.com/${{ github.repository }} "$BRANCH_NAME" --force
+
 
       - name: Create Pull Request
         if: steps.changelog.outputs.has_updates == 'true' && steps.version.outputs.run_job == 'true'
