feat: criado feature que gera insights sobre as ocorrencias, salvando em cache, analisando tentendias, ou respondendo perguntas.

--- a/Back-Java/src/main/resources/application.properties
+++ b/Back-Java/src/main/resources/application.properties
@@ -50,6 +50,12 @@ relatorios.ia.cache-ttl-diario=86400
 relatorios.ia.cache-ttl-semanal=604800
 relatorios.ia.cache-ttl-mensal=2592000
 
+insights.cache.ttl-area-critica=${INSIGHTS_CACHE_TTL_AREA_CRITICA:3600}
+insights.cache.ttl-tendencia=${INSIGHTS_CACHE_TTL_TENDENCIA:21600}
+insights.cache.ttl-padrao=${INSIGHTS_CACHE_TTL_PADRAO:86400}
+insights.cache.ttl-predicao=${INSIGHTS_CACHE_TTL_PREDICAO:43200}
+insights.cache.ttl-explicacao=${INSIGHTS_CACHE_TTL_EXPLICACAO:86400}
+
 ai.rate-limit.max-requests-per-minute=10
 ai.rate-limit.max-tokens-per-day=1000000
 
