--- a/DevopsInfra/docker-compose.yml
+++ b/DevopsInfra/docker-compose.yml
@@ -75,6 +75,8 @@ services:
     build:
       context: ../ 
       dockerfile: DevopsInfra/Dockerfile.flutter
+      args:
+        API_JAVA_BASE_URL: http://backend-java-core:8080
     ports:
       - "4200:80"
     restart: unless-stopped
@@ -87,7 +89,7 @@ services:
     container_name: frontend-angular
     restart: unless-stopped
     ports:
-      - "4200:80"
+      - "3000:80"
     environment:
       API_JAVA_BASE_URL: http://backend-java-core:8080
       
